Prevent scroll on narrow devices

--- a/concordia/static/scss/base.scss
+++ b/concordia/static/scss/base.scss
@@ -128,6 +128,7 @@ html,
 #contribute-main-content {
     background-color: $white;
     color: $dark;
+    overflow-x: hidden;
 }
 
 body {
